--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // Manifest variables
-        manifestPlaceholders = [fabricApiKey:"${customFabricApiKey}"]
+        manifestPlaceholders = [fabricApiKey: "${customFabricApiKey}"]
         resValue "string", "googleAnalyticsVersion", "${customGoogleAnalyticsApiKey}"
     }
 
@@ -42,14 +42,14 @@ android {
     }
 
     buildTypes {
-    	debug {
+        debug {
             signingConfig signingConfigs.debug
         }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-	    signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
     }
 
@@ -64,8 +64,8 @@ android {
     }
 
     lintOptions {
-	abortOnError false
-	lintConfig file("../lint.xml")
+        abortOnError false
+        lintConfig file("../lint.xml")
     }
 }
 
@@ -88,14 +88,16 @@ dependencies {
     implementation "com.google.android.gms:play-services-gcm:${googleCloudMessagingVersion}"
 
     // Network
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     // Architecture Component
     implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0-beta01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0-beta01'
 
     // Room
@@ -106,6 +108,12 @@ dependencies {
     // Database
     implementation 'androidx.room:room-runtime:2.0.0-beta01'
     annotationProcessor 'androidx.room:room-compiler:2.0.0-beta01'
+
+    // Rx
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
 
     // Unit testing
     testImplementation "org.mockito:mockito-core:2.21.0"
@@ -120,3 +128,4 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android-extensions'
