Add business logic for authentification

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'io.fabric'
+
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -67,6 +70,9 @@ android {
         abortOnError false
         lintConfig file("../lint.xml")
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -89,10 +95,12 @@ dependencies {
 
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
+//    implementation 'com.google.code.gson:gson:2.8.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     // Architecture Component
     implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0-beta01'
@@ -113,7 +121,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     // Unit testing
     testImplementation "org.mockito:mockito-core:2.21.0"
