--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
         applicationId "com.sqli.guildes"
         minSdkVersion 15
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
         // Manifest variables
         manifestPlaceholders = [fabricApiKey: "${customFabricApiKey}"]
         resValue "string", "googleAnalyticsVersion", "${customGoogleAnalyticsApiKey}"
@@ -85,6 +85,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
 
     // Crashlytics
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
@@ -102,6 +103,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     // Architecture Component
     implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0-beta01'
@@ -123,6 +126,7 @@ dependencies {
     // UI
     implementation 'com.airbnb.android:epoxy:3.3.0'
     kapt 'com.airbnb.android:epoxy-processor:3.3.0'
+    implementation 'com.github.VladimirWrites:Lemniscate:1.4.5'
 
     // Unit testing
     testImplementation "org.mockito:mockito-core:2.21.0"
