--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.google.gms:google-services:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
