--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.login.LoginActivity"/>
         <activity
-            android:name=".ui.splash.SplachActivity"
+            android:name=".ui.splash.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
