Enhancing code for Home Screen based on PR discussion

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,8 @@ android.databinding.enableV2=true
 googleCloudMessagingVersion=15.0.1
 googleAnalyticsVersion=16.0.4
 supportLibraryVersion=28.0.0
+navVersion=1.0.0
+roomVersion=2.1.0-beta01
 
 #Configuration
 customFabricApiKey=aa2739997d8f3d153e756001094d88310987a4e7
