--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,8 @@ android {
     defaultConfig {
         applicationId "com.sqli.guildes"
         minSdkVersion 15
-        targetSdkVersion 28
+        // Robolectric doesn't support target 28 and above
+        targetSdkVersion 27
         multiDexEnabled true
         versionCode 1
         versionName "0.1"
@@ -54,7 +55,7 @@ android {
         }
 
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -77,6 +78,12 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    useLibrary 'android.test.runner'
+
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
+
 }
 
 dependencies {
@@ -141,9 +148,9 @@ dependencies {
     testImplementation "org.robolectric:robolectric:3.8"
 
     // Interface testing
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test:rules:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 }
 
 apply plugin: 'kotlin-android-extensions'
