--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         resValue "string", "googleAnalyticsVersion", "${customGoogleAnalyticsApiKey}"
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     dataBinding {
         enabled = true
     }
@@ -118,17 +122,17 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     // Architecture Component
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0-alpha01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
 
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     // Rx
@@ -151,6 +155,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 
 apply plugin: 'kotlin-android-extensions'
